<?xml version="1.0"?>
<package>
  <name>refills_cram</name>
  <version>0.0.1</version>
  <description>refills-cram</description>
  <author>Kevin Störmer</author>
  <maintainer email="stoermer@uni-bremen.de">Kevin Störmer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslisp</buildtool_depend>
  <buildtool_depend>roslisp_utilities</buildtool_depend>
  <buildtool_depend>cl_tf</buildtool_depend>
  <buildtool_depend>cl_tf2</buildtool_depend>
  <buildtool_depend>actionlib_lisp</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>move_base_msgs</buildtool_depend>
  <buildtool_depend>cram_language</buildtool_depend>
  <buildtool_depend>cram_prolog</buildtool_depend>
  <buildtool_depend>cram_designators</buildtool_depend>
  <buildtool_depend>cram_process_modules</buildtool_depend>
  <buildtool_depend>cram_executive</buildtool_depend>
<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>
<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>
<build_depend>roslisp</build_depend>
<run_depend>roslisp</run_depend>
</package>
